Fixed wrong background color in opened gallery

--- a/view/frontend/web/css/source/components/_gallery.less
+++ b/view/frontend/web/css/source/components/_gallery.less
@@ -176,7 +176,7 @@
             height: 100%;
             padding: 30px;
             box-sizing: border-box;
-            background: ~"rgb(var(--base-bg, #fff))";
+            background: ~"rgb(var(--base-bg, 255, 255, 255))";
 
             .close {
                 display: block;
